# gradio

./: CNAME  README.md  _config.yml  index.html  index.md  meson.build  params.json
data/: de.haeckerfelix.gradio.gresource.xml  de.haeckerfelix.gradio.style.css
data/ui/: list-item.ui  list-item.ui~  main-window.ui  search-page.ui  stations-view.ui
data/ui/item/: big-tile-item.ui  big-tile-item.ui~  row-item.ui  row-item.ui~
data/ui/page/: station-detail-page.ui  station-detail-page.ui~
data/ui/preferences/: preferences-group.ui  preferences-group.ui~
data/ui/view/: big-tile-view.ui~
src/: gradio-additional-data-provider.vala  gradio-app.vala  gradio-discover-box-sidebar.vala  gradio-discover-box.vala  gradio-discover-page.vala  gradio-library-box.vala  gradio-library-page.vala  gradio-library.vala  gradio-main-window.vala  gradio-page.vala  gradio-player-toolbar.vala  gradio-radio-station-provider.vala  gradio-radio-station.vala  gradio-search-page.vala  gradio-station-detail-page.vala  gradio-station-model.vala  gradio-station-registry.vala  gradio-station-view.vala  gradio-stations-view-grid-item.vala  gradio-stations-view-list-item.vala  gradio-stations-view.vala  gradio-tag-box.vala  gradio-utils.vala  meson.build
src/item/: gradio-big-tile-item.vala  gradio-row-item.vala
src/page/: gradio-discover-page.vala  gradio-library-page.vala  gradio-page.vala  gradio-search-page.vala  gradio-station-detail-page.vala
src/preferences/: gradio-preferences-group.vala
src/view/: gradio-big-tile-view.vala  gradio-row-view.vala
